Changes sidebar photo size

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar60"><img src="images/headshot.jpg" alt="" /></span>
+							<span class="image avatar75">
+								<img src="images/headshot.jpg" alt="" />
+							</span>
 							<h1 id="title">Julie Lin</h1>
-							<p>Software Engineer, emphasis in full stack web development</p>
+							<p>Software Engineer, emphasis in web development</p>
 						</div>
 
 					<!-- Nav -->
