--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/index.css">
     <script type="text/javascript" src='bundle.js'></script>
     <title>julielin.me</title>
