Adds nav & header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/index.css">
     <script type="text/javascript" src='bundle.js'></script>
     <title>julielin.me</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <!-- nav bar -->
+    <div class="nav-bar">
+      <div class="logo">
+        julielin.me
+      </div>
+      <nav>
+        About | Portfolio | Contact Me
+      </nav>
+    </div>
+
+    <!-- header -->
+    <header>
+      <h1>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, and office/facilities management. </h1>
+
+    </header>
   </body>
 </html>
