Adds images folder and headshot

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- header -->
     <header>
       <h1>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, and office/facilities management. </h1>
-
+      <div class="profile-img">
+        <img src="images/headshot.jpg" alt="profile-img">
+      </div>
     </header>
   </body>
 </html>
