Adds content & styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>julielin.me</title>
   </head>
   <body>
+
     <!-- nav bar -->
+
     <div class="nav-bar">
       <div class="logo">
         julielin.me
@@ -20,11 +22,23 @@
     </div>
 
     <!-- header -->
+
     <header>
-      <h1>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, and office/facilities management. </h1>
+      <div class="header-text">
+        <p class='desc-text'>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, office/facilities management, and technical interview coaching. </p>
+        <hr />
+        <p class='titles'>Web Developer &bull; Manager &bull; Gaming Enthusiast</p>
+      </div>
       <div class="profile-img">
         <img src="images/headshot.jpg" alt="profile-img">
       </div>
     </header>
+
+
+    <!-- portfolio -->
+
+    
+
+
   </body>
 </html>
