Adds portfolio grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- header -->
 
-    <header>
+    <header id='header'>
       <div class="header-text">
         <p class='desc-text'>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, office/facilities management, and technical interview coaching. </p>
         <hr />
@@ -37,7 +37,52 @@
 
     <!-- portfolio -->
 
-    
+    <section id='portfolio'>
+      <div class="portfolio-header">
+        <h2>Portfolio</h2>
+        <hr />
+      </div>
+
+      <div class="grid checkerboard">
+
+        <div class="proj-description-wrapper">
+          <h3>Project Name</h3>
+          <p>Project blurb</p>
+        </div>
+        <div class="proj-img-wrapper">
+          <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+        </div>
+
+        <div class="proj-img-wrapper">
+          <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
+        </div>
+        <div class="proj-description-wrapper">
+          <h3>Project Name</h3>
+          <p>Project blurb</p>
+        </div>
+
+        <div class="proj-description-wrapper">
+          <h3>Project Name</h3>
+          <p>Project blurb</p>
+        </div>
+        <div class="proj-img-wrapper">
+          <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+        </div>
+
+        <div class="proj-img-wrapper">
+          <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
+        </div>
+        <div class="proj-description-wrapper">
+          <h3>Project Name</h3>
+          <p>Project blurb</p>
+        </div>
+
+      </div>
+
+
+    </section>
+
+
 
 
   </body>
