Adds screen shots and styling

--- a/index.html
+++ b/index.html
@@ -45,36 +45,24 @@
 
       <div class="grid checkerboard">
 
-        <div class="proj-description-wrapper">
-          <h3>Project Name</h3>
-          <p>Project blurb</p>
-        </div>
-        <div class="proj-img-wrapper">
-          <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+        <div class="proj-img-wrapper one">
+          <a href="https://okcupet.herokuapp.com/">
+            <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+          </a>
         </div>
 
-        <div class="proj-img-wrapper">
-          <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
-        </div>
-        <div class="proj-description-wrapper">
-          <h3>Project Name</h3>
-          <p>Project blurb</p>
+        <div class="proj-img-wrapper two">
+          <a href="https://julielin0812.github.io/budget-breakdown-calculator/">
+            <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
+          </a>
         </div>
 
-        <div class="proj-description-wrapper">
-          <h3>Project Name</h3>
-          <p>Project blurb</p>
-        </div>
-        <div class="proj-img-wrapper">
-          <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+        <div class="proj-img-wrapper three">
+          <img src="images/react_widgets_screenshot.png" alt="react_widgets_screenshot">
         </div>
 
-        <div class="proj-img-wrapper">
-          <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
-        </div>
-        <div class="proj-description-wrapper">
-          <h3>Project Name</h3>
-          <p>Project blurb</p>
+        <div class="proj-img-wrapper four">
+          <img src="images/todo_list_app_screenshot.png" alt="todo_list_app_screenshot">
         </div>
 
       </div>
