--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         julielin.me
       </div>
       <nav>
-        About | Portfolio | Contact Me
+        <a href="#top">About</a> |
+        <a href="#portfolio">Portfolio</a> |
+        <a href="#contact">Contact Me</a>
       </nav>
     </div>
 
@@ -70,7 +72,25 @@
 
     </section>
 
+    <!-- Contact -->
 
+    <section id='contact'>
+      <div class="">
+        <h1>hello world</h1>
+      </div>
+      <div class="">
+      </div>
+      <div class="">
+      </div>
+      <div class="">
+      </div>
+      <div class="">
+      </div>
+      <div class="">
+      </div>
+      <div class="">
+      </div>
+    </section>
 
 
   </body>
