--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/index.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
     <script type="text/javascript" src='bundle.js'></script>
     <title>julielin.me</title>
   </head>
@@ -19,7 +20,8 @@
       <nav>
         <a href="#top">About</a> |
         <a href="#portfolio">Portfolio</a> |
-        <a href="#contact">Contact Me</a>
+        <!-- <a href="#contact">Contact Me</a> | -->
+        <a href="#social">Social</a>
       </nav>
     </div>
 
@@ -27,9 +29,9 @@
 
     <header id='header'>
       <div class="header-text">
-        <p class='desc-text'>Hello, I'm <b>Julie</b>, a web developer with a background in business, team management, office/facilities management, and technical interview coaching. </p>
+        <p class='titles'>Julie Lin | Web Developer</p>
         <hr />
-        <p class='titles'>Web Developer &bull; Manager &bull; Gaming Enthusiast</p>
+        <p class='desc-text'>Hello! Are you looking to hire a web developer? Read on to learn more about me or jump to my portfolio to check out the projects I've done.</p>
       </div>
       <div class="profile-img">
         <img src="images/headshot.jpg" alt="profile-img">
@@ -74,24 +76,26 @@
 
     <!-- Contact -->
 
-    <section id='contact'>
-      <div class="">
-        <h1>hello world</h1>
-      </div>
-      <div class="">
-      </div>
-      <div class="">
-      </div>
-      <div class="">
-      </div>
-      <div class="">
-      </div>
-      <div class="">
-      </div>
-      <div class="">
-      </div>
-    </section>
+    <!-- <section id='contact'>
 
+    </section> -->
+
+    <!-- Social -->
+
+    <section id="social">
+      <a href="#">
+        <i class="fab fa-github-square fa-2x"></i>
+        <span>GitHub</span>
+      </a>
+      <a href="#">
+        <i class="fab fa-linkedin fa-2x"></i>
+        <span>LinkedIn</span>
+      </a>
+      <a href="#">
+        <i class="fas fa-envelope fa-2x"></i>
+        <span>Email</span>
+      </a>
+    </section>
 
   </body>
 </html>
