--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/index.css">
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+    <link rel="shortcut icon" href="#" />
     <script type="text/javascript" src='bundle.js'></script>
     <title>julielin.me</title>
   </head>
