Adds about me section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,43 @@
       </div>
     </header>
 
+    <!-- About Me -->
+
+    <section id='about'>
+      <div class="section-header">
+        <h2>About Me</h2>
+        <hr />
+      </div>
+      <div class="checkerboard">
+        <div class="one">
+          <h3>Education</h3>
+          <i class="fas fa-graduation-cap fa-3x"></i>
+        </div>
+        <div class="two">
+          <h3>Coding</h3>
+          <i class="fas fa-code fa-3x"></i>
+        </div>
+        <div class="three">
+          <h3>Work Experience</h3>
+        </div>
+        <div class="four">
+          4
+        </div>
+        <div class="five">
+
+        </div>
+      </div>
+    </section>
 
     <!-- portfolio -->
 
     <section id='portfolio'>
-      <div class="portfolio-header">
+      <div class="section-header">
         <h2>Portfolio</h2>
         <hr />
       </div>
 
-      <div class="grid checkerboard">
+      <div class="checkerboard">
 
         <div class="proj-img-wrapper one">
           <a href="https://okcupet.herokuapp.com/">
@@ -76,30 +103,30 @@
 
       </div>
 
-
     </section>
-
-    <!-- Contact -->
-
-    <!-- <section id='contact'>
-
-    </section> -->
 
     <!-- Social -->
 
     <section id="social">
-      <a href="#">
-        <i class="fab fa-github-square fa-2x"></i>
-        <span>GitHub</span>
-      </a>
-      <a href="#">
-        <i class="fab fa-linkedin fa-2x"></i>
-        <span>LinkedIn</span>
-      </a>
-      <a href="#">
-        <i class="fas fa-envelope fa-2x"></i>
-        <span>Email</span>
-      </a>
+      <div class="section-header">
+        <h3>Contact & Social</h3>
+        <hr />
+      </div>
+      <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, feel free to click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
+      <div class="social">
+        <a href="https://github.com/julielin0812">
+          <i class="fab fa-github-square fa-2x"></i>
+          <span>GitHub</span>
+        </a>
+        <a href="https://www.linkedin.com/in/julielin0812/">
+          <i class="fab fa-linkedin fa-2x"></i>
+          <span>LinkedIn</span>
+        </a>
+        <a href="mailto:julielin0812@gmail.com">
+          <i class="fas fa-envelope fa-2x"></i>
+          <span>Email</span>
+        </a>
+      </div>
     </section>
 
   </body>
