Adds AngelList icon and link

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
           <i class="fab fa-linkedin fa-2x"></i>
           <span>LinkedIn</span>
         </a>
+        <a href="https://angel.co/julie-lin0812">
+          <i class="fab fa-angellist fa-2x"></i>
+          <span>AngelList</span>
+        </a>
         <a href="mailto:julielin0812@gmail.com">
           <i class="fas fa-envelope fa-2x"></i>
           <span>Email</span>
