--- a/index.html
+++ b/index.html
@@ -50,19 +50,50 @@
         <div class="one">
           <h3>Education</h3>
           <i class="fas fa-graduation-cap fa-3x"></i>
+          <ul class="">
+            <li>San Francisco State University</li>
+            <li>B.S. Business Administration, concentration in Management</li>
+            <li>Graduate <i>cum laude</i></li>
+          </ul>
         </div>
         <div class="two">
           <h3>Coding</h3>
           <i class="fas fa-code fa-3x"></i>
+          <ul class="">
+            <li>App Academy</li>
+            <li>Full-stack Web Development</li>
+            <li>1000+ hour coding bootcamp</li>
+            <li>Eat, sleep, code, repeat</li>
+          </ul>
         </div>
         <div class="three">
-          <h3>Work Experience</h3>
+          <i class="fas fa-briefcase fa-3x"></i>
+          <ul class="">
+            <h3>Work Experience</h3>
+            <li>2+ years office/facilities management</li>
+            <li>2+ years retail management</li>
+            <li>2 years technical support </li>
+            <li>2+ years Oceanography/Geosciences TA </li>
+            <li>1 years audio/visual support </li>
+          </ul>
         </div>
         <div class="four">
-          4
+          <i class="fas fa-tasks fa-3x"></i>
+          <ul class="">
+            <h3>Currently Working on...</h3>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
         <div class="five">
-
+          <i class="fas fa-coffee fa-3x"></i>
+          <ul class="">
+            <h3>Random bits</h3>
+            <li><i class="fas fa-heart"></i>Coffee</li>
+            <li><i class="fas fa-gamepad"></i>Video Game Enthusiast</li>
+            <li><i class="fas fa-suitcase"></i>Travel</li>
+          </ul>
         </div>
       </div>
     </section>
