Add content to and styles about me section

--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
             <h3>Work Experience</h3>
             <li>2+ years office/facilities management</li>
             <li>2+ years retail management</li>
-            <li>2 years technical support </li>
-            <li>2+ years Oceanography/Geosciences TA </li>
-            <li>1 years audio/visual support </li>
+            <li>2 years technical support</li>
+            <li>2+ years Oceanography/Geosciences Teaching Assistant</li>
+            <li>1 years audio/visual support</li>
           </ul>
         </div>
         <div class="four">
           <i class="fas fa-tasks fa-3x"></i>
           <ul class="">
             <h3>Currently Working on...</h3>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Supporting App Academy's Placements Team by conducting mock technical interviews with a/A alumni</li>
+            <li>Reading Cracking the Coding Interview by Gayle Laakmann McDowell</li>
+            <li>Continuing to improve past projects and creating new ones</li>
           </ul>
         </div>
-        <div class="five">
+        <!-- <div class="five">
           <i class="fas fa-coffee fa-3x"></i>
           <ul class="">
             <h3>Random bits</h3>
@@ -94,7 +94,7 @@
             <li><i class="fas fa-gamepad"></i>Video Game Enthusiast</li>
             <li><i class="fas fa-suitcase"></i>Travel</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </section>
 
