--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         julielin.me
       </div>
       <nav>
-        <a href="#top">About</a> |
+        <a href="#about">About</a> |
         <a href="#portfolio">Portfolio</a> |
         <!-- <a href="#contact">Contact Me</a> | -->
         <a href="#social">Social</a>
