Adds footer & fixes social links

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
             <li><i class="fas fa-heart"></i>Coffee</li>
             <li><i class="fas fa-gamepad"></i>Video Game Enthusiast</li>
             <li><i class="fas fa-suitcase"></i>Travel</li>
+            <li><i class="fas fa-film"></i>Movies</li>
+            <li><i class="fas fa-headphones"></i>Music</li>
           </ul>
         </div> -->
       </div>
@@ -138,6 +140,7 @@
 
     <!-- Social -->
 
+
     <section id="social">
       <div class="section-header">
         <h2>Contact & Social</h2>
@@ -145,24 +148,37 @@
       </div>
       <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, feel free to click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
       <div class="social">
-        <a href="https://github.com/julielin0812">
           <i class="fab fa-github-square fa-2x"></i>
-          <span>GitHub</span>
-        </a>
-        <a href="https://www.linkedin.com/in/julielin0812/">
+          <a href="https://github.com/julielin0812">
+            GitHub
+          </a>
           <i class="fab fa-linkedin fa-2x"></i>
-          <span>LinkedIn</span>
-        </a>
-        <a href="https://angel.co/julie-lin0812">
+          <a href="https://www.linkedin.com/in/julielin0812/">
+            LinkedIn
+          </a>
           <i class="fab fa-angellist fa-2x"></i>
-          <span>AngelList</span>
-        </a>
-        <a href="mailto:julielin0812@gmail.com">
+          <a href="https://angel.co/julie-lin0812">
+            AngelList
+          </a>
           <i class="fas fa-envelope fa-2x"></i>
-          <span>Email</span>
-        </a>
+          <a href="mailto:julielin0812@gmail.com">
+            Email
+          </a>
       </div>
     </section>
 
+    <footer>
+      <section>
+        Created by Julie Lin <i class="far fa-copyright"></i> 2018 |
+        <script type="text/javascript">
+        const dateModified = document.lastModified;
+        mydate = dateModified.slice(0,16);
+        document.write("Last updated: " + mydate);
+        </script>
+      </section>
+
+      <!-- <a href="https://validator.w3.org/check?uri=referer"><i class="fab fa-html5 fa-2x"></i></a>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer"><i class="fab fa-css3-alt fa-2x"></i></a> -->
+    </footer>
   </body>
 </html>
