Update react widgets screenshot

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
       </div>
     </section>
 
+    <!-- Add technology stack banner here -->
+
     <!-- portfolio -->
 
     <section id='portfolio'>
