Fixes social icons/links

--- a/index.html
+++ b/index.html
@@ -149,24 +149,24 @@
         <h2>Contact & Social</h2>
         <hr />
       </div>
-      <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, feel free to click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
+      <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
       <div class="social">
+        <div class="">
           <i class="fab fa-github-square fa-2x"></i>
-          <a href="https://github.com/julielin0812">
-            GitHub
-          </a>
+          <a href="https://github.com/julielin0812">GitHub</a>
+        </div>
+        <div class="">
           <i class="fab fa-linkedin fa-2x"></i>
-          <a href="https://www.linkedin.com/in/julielin0812/">
-            LinkedIn
-          </a>
+          <a href="https://www.linkedin.com/in/julielin0812/">LinkedIn</a>
+        </div>
+        <div class="">
           <i class="fab fa-angellist fa-2x"></i>
-          <a href="https://angel.co/julie-lin0812">
-            AngelList
-          </a>
+          <a href="https://angel.co/julie-lin0812">AngelList</a>
+        </div>
+        <div class="">
           <i class="fas fa-envelope fa-2x"></i>
-          <a href="mailto:julielin0812@gmail.com">
-            Email
-          </a>
+          <a href="mailto:julielin0812@gmail.com">Email</a>
+        </div>
       </div>
     </section>
 
