Fixes styling for mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <hr />
       </div>
       <div class="checkerboard">
-        <div class="one">
+        <div class="one cb-div">
           <h3>Education</h3>
           <i class="fas fa-graduation-cap fa-3x"></i>
           <ul class="">
@@ -57,7 +57,7 @@
             <li>Graduate <i>cum laude</i></li>
           </ul>
         </div>
-        <div class="two">
+        <div class="two cb-div">
           <h3>Coding</h3>
           <i class="fas fa-code fa-3x"></i>
           <ul class="">
@@ -67,7 +67,7 @@
             <li>Eat, sleep, code, repeat</li>
           </ul>
         </div>
-        <div class="three">
+        <div class="three cb-div">
           <i class="fas fa-briefcase fa-3x"></i>
           <ul class="">
             <h3>Work Experience</h3>
@@ -78,7 +78,7 @@
             <li>1 years audio/visual support</li>
           </ul>
         </div>
-        <div class="four">
+        <div class="four cb-div">
           <i class="fas fa-tasks fa-3x"></i>
           <ul class="">
             <h3>Currently Working on...</h3>
