--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
       </div>
       <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
       <div class="social">
-        <div class="">
-          <i class="fab fa-github-square fa-2x"></i>
-          <a href="https://github.com/julielin0812">GitHub</a>
+        <div class="link-wrapper">
+          <!-- <i class="fab fa-github-square fa-2x"></i> -->
+          <a href="https://github.com/julielin0812"><i class="fab fa-github-square fa-2x"></i>GitHub</a>
         </div>
-        <div class="">
+        <div class="link-wrapper">
           <i class="fab fa-linkedin fa-2x"></i>
           <a href="https://www.linkedin.com/in/julielin0812/">LinkedIn</a>
         </div>
-        <div class="">
+        <div class="link-wrapper">
           <i class="fab fa-angellist fa-2x"></i>
           <a href="https://angel.co/julie-lin0812">AngelList</a>
         </div>
-        <div class="">
+        <div class="link-wrapper">
           <i class="fas fa-envelope fa-2x"></i>
           <a href="mailto:julielin0812@gmail.com">Email</a>
         </div>
