--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
         <hr />
       </div>
       <div class="checkerboard">
-        <div class="one cb-div">
+        <div class="about one cb-div">
           <i class="fas fa-graduation-cap fa-3x"></i>
-          <h3>Education</h3>
           <ul class="">
+            <h3>Education</h3>
             <li>San Francisco State University</li>
             <li>B.S. Business Administration, concentration in Management</li>
             <li>Graduate <i>cum laude</i></li>
           </ul>
         </div>
-        <div class="two cb-div">
+        <div class="about two cb-div">
           <i class="fas fa-code fa-3x"></i>
-          <h3>Coding</h3>
           <ul class="">
+            <h3>Coding</h3>
             <li>App Academy</li>
             <li>Full-stack Web Development</li>
             <li>1000+ hour coding bootcamp</li>
             <li>Eat, sleep, code, repeat</li>
           </ul>
         </div>
-        <div class="three cb-div">
+        <div class="about three cb-div">
           <i class="fas fa-briefcase fa-3x"></i>
-          <h3>Work Experience</h3>
           <ul class="">
+            <h3>Work Experience</h3>
             <li>2+ years office/facilities management</li>
             <li>2+ years retail management</li>
             <li>2 years technical support</li>
@@ -78,10 +78,10 @@
             <li>1 years audio/visual support</li>
           </ul>
         </div>
-        <div class="four cb-div">
+        <div class="about four cb-div">
           <i class="fas fa-tasks fa-3x"></i>
-          <h3>Currently Working on...</h3>
           <ul class="">
+            <h3>Currently Working on...</h3>
             <li>Supporting App Academy's Placements Team by conducting mock technical interviews with a/A alumni</li>
             <li>Reading Cracking the Coding Interview by Gayle Laakmann McDowell</li>
             <li>Continuing to improve past projects and creating new ones</li>
@@ -152,8 +152,8 @@
       <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
       <div class="social">
         <div class="link-wrapper">
-          <!-- <i class="fab fa-github-square fa-2x"></i> -->
-          <a href="https://github.com/julielin0812"><i class="fab fa-github-square fa-2x"></i>GitHub</a>
+          <i class="fab fa-github-square fa-2x"></i>
+          <a href="https://github.com/julielin0812"></i>GitHub</a>
         </div>
         <div class="link-wrapper">
           <i class="fab fa-linkedin fa-2x"></i>
