--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <i class="fas fa-tasks fa-3x"></i>
           <ul class="">
             <h3>Currently Working on...</h3>
-            <li>Supporting App Academy's Placements Team by conducting mock technical interviews with a/A alumni</li>
+            <li>Supporting App Academy's Placements Team as a Technical TA</li>
             <li>Reading Cracking the Coding Interview by Gayle Laakmann McDowell</li>
-            <li>Continuing to improve past projects and creating new ones</li>
+            <li>Creating a new & improve website for <a href="https://sites.google.com/view/tigercrabstudios/home">Tiger Crabs Studios</a></li>
           </ul>
         </div>
         <!-- <div class="five">
@@ -149,24 +149,19 @@
         <h2>Contact & Social</h2>
         <hr />
       </div>
-      <p>Thanks for visiting my personal portfolio site! If you'd like to contact me, click on the email link below. Feel free to check out my Github, LinkedIn, and AngelList profiles too using the respective links below.</p>
       <div class="social">
-        <div class="link-wrapper">
-          <i class="fab fa-github-square fa-2x"></i>
-          <a href="https://github.com/julielin0812"></i>GitHub</a>
-        </div>
-        <div class="link-wrapper">
-          <i class="fab fa-linkedin fa-2x"></i>
-          <a href="https://www.linkedin.com/in/julielin0812/">LinkedIn</a>
-        </div>
-        <div class="link-wrapper">
-          <i class="fab fa-angellist fa-2x"></i>
-          <a href="https://angel.co/julie-lin0812">AngelList</a>
-        </div>
-        <div class="link-wrapper">
-          <i class="fas fa-envelope fa-2x"></i>
-          <a href="mailto:julielin0812@gmail.com">Email</a>
-        </div>
+          <a href="https://github.com/julielin0812">
+            <i class="fab fa-github-square fa-3x"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/julielin0812/">
+            <i class="fab fa-linkedin fa-3x"></i>
+          </a>
+          <a href="https://angel.co/julie-lin0812">
+            <i class="fab fa-angellist fa-3x"></i>
+          </a>
+          <a href="mailto:julielin0812@gmail.com">
+            <i class="fas fa-envelope fa-3x"></i>
+          </a>
       </div>
     </section>
 
