Adds screenshot to projects

--- a/index.html
+++ b/index.html
@@ -114,24 +114,30 @@
       <div class="checkerboard">
 
         <div class="proj-img-wrapper one">
+          <a href="https://julielin0812.github.io/tiger-crab-studios/">
+            <img src="images/tiger_crab_studios_screenshot.png" alt="tiger_crab_studios_screenshot">
+          </a>
+        </div>
+
+        <div class="proj-img-wrapper two">
           <a href="https://okcupet.herokuapp.com/">
             <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
           </a>
         </div>
 
-        <div class="proj-img-wrapper two">
+        <div class="proj-img-wrapper three">
           <a href="https://julielin0812.github.io/budget-breakdown-calculator/">
             <img src="images/budget_breakdown_calc_screenshot.png" alt="budget_breakdown_calc_screenshot">
           </a>
         </div>
 
-        <div class="proj-img-wrapper three">
+        <div class="proj-img-wrapper four">
           <a href="https://julielin0812.github.io/react-widgets/">
             <img src="images/react_widgets_screenshot.png" alt="react_widgets_screenshot">
           </a>
         </div>
 
-        <div class="proj-img-wrapper four">
+        <div class="proj-img-wrapper five">
           <a href="https://julielin0812.github.io/todo-list-app/">
             <img src="images/todo_list_app_screenshot.png" alt="todo_list_app_screenshot">
           </a>
