Update About Me details

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
             <li>2+ years retail management</li>
             <li>2 years technical support</li>
             <li>2+ years Oceanography/Geosciences Teaching Assistant</li>
-            <li>1 years audio/visual support</li>
+            <li>1 year audio/visual support</li>
           </ul>
         </div>
         <div class="about four cb-div">
           <i class="fas fa-tasks fa-3x"></i>
           <ul class="">
             <h3>Currently Working on...</h3>
-            <li>Supporting App Academy's Placements Team as a Technical TA</li>
-            <li>Reading Cracking the Coding Interview by Gayle Laakmann McDowell</li>
-            <li>Creating a new & improve website for <a href="https://sites.google.com/view/tigercrabstudios/home">Tiger Crabs Studios</a></li>
+            <li>My reading list: Reading Cracking the Coding Interview by Gayle Laakmann McDowell, Eloquent JavaScript, 3rd edition by Marijn Haverbeke, & You Don't Know JS (series) by Kyle Simpson</li>
+            <li>Creating a ReactJS web app for <a href="https://sites.google.com/view/tigercrabstudios/home">Tiger Crabs Studios</a></li>
+            <li>Planning my next projects - I've got a couple ideas in the pipeline</li>
           </ul>
         </div>
         <!-- <div class="five">
