Fix typos & add About Me details

--- a/index.html
+++ b/index.html
@@ -82,9 +82,21 @@
           <i class="fas fa-tasks fa-3x"></i>
           <ul class="">
             <h3>Currently Working on...</h3>
-            <li>My reading list: Reading Cracking the Coding Interview by Gayle Laakmann McDowell, Eloquent JavaScript, 3rd edition by Marijn Haverbeke, & You Don't Know JS (series) by Kyle Simpson</li>
             <li>Creating a ReactJS web app for <a href="https://sites.google.com/view/tigercrabstudios/home">Tiger Crabs Studios</a></li>
             <li>Planning my next projects - I've got a couple ideas in the pipeline</li>
+            <li>Learning DevOps at App Academy</li>
+            <li>My reading list:
+               <ul>
+                 <li>
+                   <i>Cracking the Coding Interview</i> by Gayle Laakmann McDowell
+                 </li>
+                 <li>
+                   <i>Eloquent JavaScript, 3rd edition</i> by Marijn Haverbeke
+                 </li>
+                 <li>
+                   <i>You Don't Know JS (series)</i> by Kyle Simpson</li>
+                 </li>
+               </ul>
           </ul>
         </div>
         <!-- <div class="five">
