Add more content to About Me & styling

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="checkerboard">
         <div class="about one cb-div">
           <i class="fas fa-graduation-cap fa-3x"></i>
+          <h3>Education</h3>
           <ul class="">
-            <h3>Education</h3>
             <li>San Francisco State University</li>
             <li>B.S. Business Administration, concentration in Management</li>
             <li>Graduate <i>cum laude</i></li>
@@ -59,8 +59,8 @@
         </div>
         <div class="about two cb-div">
           <i class="fas fa-code fa-3x"></i>
+          <h3>Coding</h3>
           <ul class="">
-            <h3>Coding</h3>
             <li>App Academy</li>
             <li>Full-stack Web Development</li>
             <li>1000+ hour coding bootcamp</li>
@@ -69,8 +69,8 @@
         </div>
         <div class="about three cb-div">
           <i class="fas fa-briefcase fa-3x"></i>
+          <h3>Work Experience</h3>
           <ul class="">
-            <h3>Work Experience</h3>
             <li>2+ years office/facilities management</li>
             <li>2+ years retail management</li>
             <li>2 years technical support</li>
@@ -80,36 +80,40 @@
         </div>
         <div class="about four cb-div">
           <i class="fas fa-tasks fa-3x"></i>
+          <h3>Currently Working on...</h3>
           <ul class="">
-            <h3>Currently Working on...</h3>
             <li>Creating a ReactJS web app for <a href="https://sites.google.com/view/tigercrabstudios/home">Tiger Crabs Studios</a></li>
             <li>Planning my next projects - I've got a couple ideas in the pipeline</li>
             <li>Learning DevOps at App Academy</li>
-            <li>My reading list:
-               <ul>
-                 <li>
-                   <i>Cracking the Coding Interview</i> by Gayle Laakmann McDowell
-                 </li>
-                 <li>
-                   <i>Eloquent JavaScript, 3rd edition</i> by Marijn Haverbeke
-                 </li>
-                 <li>
-                   <i>You Don't Know JS (series)</i> by Kyle Simpson</li>
-                 </li>
-               </ul>
           </ul>
         </div>
-        <!-- <div class="five">
+        <div class="five">
+          <i class="fas fa-book fa-3x"></i>
+          <h3>My Reading List</h3>
+          <ul>
+            <li>
+              <i>Cracking the Coding Interview</i> by Gayle Laakmann McDowell
+            </li>
+            <li>
+              <i>Eloquent JavaScript, 3rd edition</i> by Marijn Haverbeke
+            </li>
+            <li>
+              <i>You Don't Know JS (series)</i> by Kyle Simpson</li>
+            </li>
+          </ul>
+        </div>
+        <div class="six">
           <i class="fas fa-coffee fa-3x"></i>
           <ul class="">
             <h3>Random bits</h3>
             <li><i class="fas fa-heart"></i>Coffee</li>
             <li><i class="fas fa-gamepad"></i>Video Game Enthusiast</li>
+            <li><i class="fas fa-paw"></i></i>Cats & Dogs</li>
             <li><i class="fas fa-suitcase"></i>Travel</li>
             <li><i class="fas fa-film"></i>Movies</li>
             <li><i class="fas fa-headphones"></i>Music</li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </section>
 
