Add resume & link to resume

--- a/index.html
+++ b/index.html
@@ -180,9 +180,12 @@
           <a href="https://angel.co/julie-lin0812">
             <i class="fab fa-angellist fa-3x"></i>
           </a>
-          <a href="mailto:julielin0812@gmail.com">
-            <i class="fas fa-envelope fa-3x"></i>
+          <a href="./docs/Resume_-_Julie_Lin.pdf">
+            <i class="fas fa-file-alt fa-3x"></i>
           </a>
+          <!-- <a href="mailto:julielin0812@gmail.com">
+            <i class="fas fa-envelope fa-3x"></i>
+          </a> -->
       </div>
     </section>
 
