Move images & docs to src folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class='desc-text'>Hello! Are you looking to hire a web developer? Read on to learn more about me or jump to my portfolio to check out the projects I've done.</p>
       </div>
       <div class="profile-img">
-        <img src="images/headshot.jpg" alt="profile-img">
+        <img src="./src/images/headshot.jpg" alt="profile-img">
       </div>
     </header>
 
@@ -131,31 +131,31 @@
 
         <div class="proj-img-wrapper one">
           <a href="https://julielin0812.github.io/tiger-crab-studios/">
-            <img src="images/tiger_crab_studios_screenshot.png" alt="tiger_crab_studios_screenshot">
+            <img src="./src/images/tiger_crab_studios_screenshot.png" alt="tiger_crab_studios_screenshot">
           </a>
         </div>
 
         <div class="proj-img-wrapper two">
           <a href="https://okcupet.herokuapp.com/">
-            <img src="images/okcupet_screenshot.png" alt="okcupet_screenshot">
+            <img src="./src/images/okcupet_screenshot.png" alt="okcupet_screenshot">
           </a>
         </div>
 
         <div class="proj-img-wrapper three">
           <a href="https://julielin0812.github.io/budget-breakdown-calculator/">
-            <img src="images/budget-breakdown-calc-screenshot.png" alt="budget_breakdown-calc-screenshot">
+            <img src="./src/images/budget-breakdown-calc-screenshot.png" alt="budget_breakdown-calc-screenshot">
           </a>
         </div>
 
         <div class="proj-img-wrapper four">
           <a href="https://julielin0812.github.io/react-widgets/">
-            <img src="images/widgets-screenshot.png" alt="react-widgets-screenshot">
+            <img src="./src/images/widgets-screenshot.png" alt="react-widgets-screenshot">
           </a>
         </div>
 
         <div class="proj-img-wrapper five">
           <a href="https://julielin0812.github.io/todo-list-app/">
-            <img src="images/todo-app-screenshot.png" alt="todo-list-app-screenshot">
+            <img src="./src/images/todo-app-screenshot.png" alt="todo-list-app-screenshot">
           </a>
         </div>
 
@@ -180,7 +180,7 @@
           <a href="https://angel.co/julie-lin0812">
             <i class="fab fa-angellist fa-3x"></i>
           </a>
-          <a href="./docs/Resume_-_Julie_Lin.pdf">
+          <a href="./src/docs/Resume_-_Julie_Lin.pdf">
             <i class="fas fa-file-alt fa-3x"></i>
           </a>
           <!-- <a href="mailto:julielin0812@gmail.com">
