Add icon labels

--- a/index.html
+++ b/index.html
@@ -173,15 +173,19 @@
       <div class="social">
           <a href="https://github.com/julielin0812">
             <i class="fab fa-github-square fa-3x"></i>
+            Github
           </a>
           <a href="https://www.linkedin.com/in/julielin0812/">
             <i class="fab fa-linkedin fa-3x"></i>
+            LinkedIn
           </a>
           <a href="https://angel.co/julie-lin0812">
             <i class="fab fa-angellist fa-3x"></i>
+            Angel List
           </a>
           <a href="./src/docs/Resume_-_Julie_Lin.pdf">
             <i class="fas fa-file-alt fa-3x"></i>
+            Resume
           </a>
           <!-- <a href="mailto:julielin0812@gmail.com">
             <i class="fas fa-envelope fa-3x"></i>
