Add menu toggle btn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="logo">
         julielin.me
       </div>
-      <nav>
+      <div class="toggle-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+      <nav class="nav-items">
         <a href="#about">About</a> |
         <a href="#portfolio">Portfolio</a> |
         <a href="#social">Social</a>
