--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <i class="fas fa-bars"></i>
       </div>
       <nav class="nav-items">
-        <a href="#about">About</a> |
-        <a href="#portfolio">Portfolio</a> |
+        <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
         <a href="#social">Social</a>
       </nav>
     </div>
