Add toggle function

--- a/index.html
+++ b/index.html
@@ -205,5 +205,9 @@
       <!-- <a href="https://validator.w3.org/check?uri=referer"><i class="fab fa-html5 fa-2x"></i></a>
       <a href="https://jigsaw.w3.org/css-validator/check/referer"><i class="fab fa-css3-alt fa-2x"></i></a> -->
     </footer>
+
+    <script type="text/javascript" src="src/toggle.js">
+
+    </script>
   </body>
 </html>
