--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <!-- nav bar -->
 
     <div class="nav-bar">
-      <div class="logo">
-        julielin.me
-      </div>
+      <div class="logo">julielin.me</div>
       <div class="toggle-btn">
-        <i class="fas fa-bars"></i>
+        <i class="fas fa-bars fa-2x"></i>
       </div>
       <nav class="nav-items">
         <a href="#about">About</a>
@@ -33,9 +31,8 @@
 
     <header id='header'>
       <div class="header-text">
-        <p class='titles'>Julie Lin | Web Developer</p>
-        <hr />
-        <p class='desc-text'>Hello! Are you looking to hire a web developer? Read on to learn more about me or jump to my portfolio to check out the projects I've done.</p>
+        <h1 class='titles'>Julie Lin | Web Developer</h1>
+        <p class='desc-text'>Hello! Are you looking to hire a frontend or full-stack web developer? Look no further! Read on to learn about my background and interests. Or navigate to my portfolio to check out my past and current projects. Navigate all the way to the bottom to connect via LinkedIn, AngelList, etc.</p>
       </div>
       <div class="profile-img">
         <img src="./src/images/headshot.jpg" alt="profile-img">
